Resolves: tdf#123175 don't use NWF to draw buttons with an overridden bg

Change-Id: I434f476f62c5c754d96eeb0cb9ad7c0b8d38ccec
Reviewed-on: https://gerrit.libreoffice.org/70069
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>